--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -1175,7 +1175,7 @@
                                     <img src="assets/images/w1.jpg" alt="prtfl-img10-1.jpg" itemprop="image">
                                     <div class="prtfl-inf8">
                                         <span class="prtfl-cat8"><a href="#" title="" itemprop="url"></a><a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a><a href="#" title="" itemprop="url"></a></span>
-                                        <h4 itemprop="headline"><a href="" title="" itemprop="url">Title Here</a></h4>
+                                        <h4 itemprop="headline"><a href="" title="" itemprop="url">Water</a></h4>
                                         <p itemprop="description">Content here.Content here.Content here.Content here.Content here.Content here.Content here.</p>
                                         <a class="thm-btn" href="" title="" itemprop="url">View Project<i class="fa fa-long-arrow-right"></i></a>
                                     </div>
@@ -1186,7 +1186,7 @@
                                     <img src="assets/images/w2.jpg" alt="prtfl-img10-2.jpg" itemprop="image">
                                     <div class="prtfl-inf8">
                                         <span class="prtfl-cat8"><a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a></span>
-                                        <h4 itemprop="headline"><a href="" title="" itemprop="url">Title Here</a></h4>
+                                        <h4 itemprop="headline"><a href="" title="" itemprop="url">EPC</a></h4>
                                         <p itemprop="description">Content here.Content here.Content here.Content here.Content here.Content here.Content here.</p>
                                         <a class="thm-btn" href="" title="" itemprop="url">View Project<i class="fa fa-long-arrow-right"></i></a>
                                     </div>
@@ -1197,7 +1197,7 @@
                                     <img src="assets/images/w3.jpg" alt="prtfl-img10-3.jpg" itemprop="image">
                                     <div class="prtfl-inf8">
                                         <span class="prtfl-cat8"><a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a></span>
-                                        <h4 itemprop="headline"><a href="" title="" itemprop="url">Title Here.</a></h4>
+                                        <h4 itemprop="headline"><a href="" title="" itemprop="url">Solar</a></h4>
                                         <p itemprop="description">Content here.Content here.Content here.Content here.Content here.Content here.Content here.</p>
                                         <a class="thm-btn" href="" title="" itemprop="url">View Project<i class="fa fa-long-arrow-right"></i></a>
                                     </div>
