--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -1158,7 +1158,7 @@
                 </div>
             </div>
         </section>-->
-        <section style="margin-top:-10%">
+        <section style="margin-top:-15%;padding-top:30px;">
             <div class="gap">
                 <div class="paddlr100">
                     <!--<ul class="fltr-btns">
@@ -1173,9 +1173,9 @@
                             <div class="col-md-4 col-sm-6 col-lg-4 fltr-itm fltr-itm1">
                                 <div class="prtfl-box8">
                                     <img src="assets/images/w1.jpg" alt="prtfl-img10-1.jpg" itemprop="image">
-                                    <div class="prtfl-inf8">
+                                    <div class="prtfl-inf8" style="background-color: #00aba9!important;">
                                         <span class="prtfl-cat8"><a href="#" title="" itemprop="url"></a><a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a><a href="#" title="" itemprop="url"></a></span>
-                                        <h4 itemprop="headline"><a href="" title="" itemprop="url">Water</a></h4>
+                                        <h4 itemprop="headline"><a href="" title="" itemprop="url" style="color: #f5fcfc!important;">Water</a></h4>
                                         <p itemprop="description">Content here.Content here.Content here.Content here.Content here.Content here.Content here.</p>
                                         <a class="thm-btn" href="" title="" itemprop="url">View Project<i class="fa fa-long-arrow-right"></i></a>
                                     </div>
@@ -1184,9 +1184,9 @@
                             <div class="col-md-4 col-sm-6 col-lg-4 fltr-itm fltr-itm2">
                                 <div class="prtfl-box8">
                                     <img src="assets/images/w2.jpg" alt="prtfl-img10-2.jpg" itemprop="image">
-                                    <div class="prtfl-inf8">
+                                    <div class="prtfl-inf8" style="background-color: #e3ce24!important;">
                                         <span class="prtfl-cat8"><a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a></span>
-                                        <h4 itemprop="headline"><a href="" title="" itemprop="url">EPC</a></h4>
+                                        <h4 itemprop="headline"><a href="" title="" itemprop="url" style="color: #fff!important;">EPC</a></h4>
                                         <p itemprop="description">Content here.Content here.Content here.Content here.Content here.Content here.Content here.</p>
                                         <a class="thm-btn" href="" title="" itemprop="url">View Project<i class="fa fa-long-arrow-right"></i></a>
                                     </div>
@@ -1195,9 +1195,9 @@
                             <div class="col-md-4 col-sm-6 col-lg-4 fltr-itm fltr-itm3">
                                 <div class="prtfl-box8">
                                     <img src="assets/images/w3.jpg" alt="prtfl-img10-3.jpg" itemprop="image">
-                                    <div class="prtfl-inf8">
+                                    <div class="prtfl-inf8" style="background-color: #ff9300!important;">
                                         <span class="prtfl-cat8"><a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a></span>
-                                        <h4 itemprop="headline"><a href="" title="" itemprop="url">Solar</a></h4>
+                                        <h4 itemprop="headline"><a href="" title="" itemprop="url" style="color: #fff!important;">Solar</a></h4>
                                         <p itemprop="description">Content here.Content here.Content here.Content here.Content here.Content here.Content here.</p>
                                         <a class="thm-btn" href="" title="" itemprop="url">View Project<i class="fa fa-long-arrow-right"></i></a>
                                     </div>
@@ -1290,7 +1290,7 @@
                                 <div class="col-md-6 col-sm-12 col-lg-6 slideInLeft wow" data-wow-duration="1s"
                                     data-wow-delay=".2s">
                                     <div class="hir-box text-center">
-                                        <img src="assets/images/gg.jpg" alt="tgl-mckp1.png" itemprop="image">
+                                        <img src="assets/images/w1.jpg" alt="tgl-mckp1.png" itemprop="image">
                                         
                                         <a class="thm-btn" href="" title="" style=" margin-top:1%;background-color: #22be32; "itemprop="url">Hire Us</a>
                                     </div>
