--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -1158,8 +1158,8 @@
                 </div>
             </div>
         </section>-->
-        <section style="margin-top:-15%;padding-top:30px;">
-            <div class="gap">
+        <section style="margin-top:-15%;">
+            <div class="gap" style="padding-top:50px!important;background-image: url(assets/images/solbg.jpg);background-size: cover;">
                 <div class="paddlr100">
                     <!--<ul class="fltr-btns">
                         <li class="active"><a data-filter="*" href="#" itemprop="url">ALL</a></li>
@@ -1170,7 +1170,7 @@
                     </ul> Filter Buttons -->
                     <div class="remove-ext9 fltr-dta text-right">
                         <div class="row masonry mrg55">
-                            <div class="col-md-4 col-sm-6 col-lg-4 fltr-itm fltr-itm1">
+                            <div class="col-md-4 col-sm-6 col-lg-3 fltr-itm fltr-itm1">
                                 <div class="prtfl-box8">
                                     <img src="assets/images/w1.jpg" alt="prtfl-img10-1.jpg" itemprop="image">
                                     <div class="prtfl-inf8" style="background-color: #00aba9!important;">
@@ -1181,8 +1181,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4 col-sm-6 col-lg-4 fltr-itm fltr-itm2">
-                                <div class="prtfl-box8">
+                            <div class="col-md-4 col-sm-6 col-lg-3 fltr-itm fltr-itm2">
+                                <div class="prtfl-box8" style="border-radius: 10px;box-shadow: 0 0 5px #000000;">
                                     <img src="assets/images/w2.jpg" alt="prtfl-img10-2.jpg" itemprop="image">
                                     <div class="prtfl-inf8" style="background-color: #e3ce24!important;">
                                         <span class="prtfl-cat8"><a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a></span>
@@ -1192,12 +1192,23 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4 col-sm-6 col-lg-4 fltr-itm fltr-itm3">
-                                <div class="prtfl-box8">
+                            <div class="col-md-4 col-sm-6 col-lg-3 fltr-itm fltr-itm3">
+                                <div class="prtfl-box8" style="border-radius: 10px;box-shadow: 0 0 5px #000000;">
                                     <img src="assets/images/w3.jpg" alt="prtfl-img10-3.jpg" itemprop="image">
                                     <div class="prtfl-inf8" style="background-color: #ff9300!important;">
                                         <span class="prtfl-cat8"><a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a></span>
                                         <h4 itemprop="headline"><a href="" title="" itemprop="url" style="color: #fff!important;">Solar</a></h4>
+                                        <p itemprop="description">Content here.Content here.Content here.Content here.Content here.Content here.Content here.</p>
+                                        <a class="thm-btn" href="" title="" itemprop="url">View Project<i class="fa fa-long-arrow-right"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-6 col-lg-3 fltr-itm fltr-itm3">
+                                <div class="prtfl-box8" style="border-radius: 10px;box-shadow: 0 0 5px #000000;">
+                                    <img src="assets/images/w3.jpg" alt="prtfl-img10-3.jpg" itemprop="image">
+                                    <div class="prtfl-inf8" style="background-color: #9dc502!important;">
+                                        <span class="prtfl-cat8"><a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a> <a href="#" title="" itemprop="url"></a></span>
+                                        <h4 itemprop="headline"><a href="" title="" itemprop="url" style="color: #fff!important;">Power</a></h4>
                                         <p itemprop="description">Content here.Content here.Content here.Content here.Content here.Content here.Content here.</p>
                                         <a class="thm-btn" href="" title="" itemprop="url">View Project<i class="fa fa-long-arrow-right"></i></a>
                                     </div>
