--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -1142,23 +1142,31 @@
                 <div class="container">
                     <div class="spnsr-wrp spnsr-car text-center owl-carousel">
                         <div class="spnsr-itm">
-                            <a href="#" title="" itemprop="url"><img src="assets/images/dummy-logo.png"
+                            <a href="#" title="" itemprop="url"><img src="assets/images/a1.png"
                                     alt="spnsr-img1-1.png" itemprop="image"></a>
                         </div>
                         <div class="spnsr-itm">
-                            <a href="#" title="" itemprop="url"><img src="assets/images/dummy-logo.png"
+                            <a href="#" title="" itemprop="url"><img src="assets/images/a2.jpg"
                                     alt="spnsr-img1-2.png" itemprop="image"></a>
                         </div>
                         <div class="spnsr-itm">
-                            <a href="#" title="" itemprop="url"><img src="assets/images/dummy-logo.png"
+                            <a href="#" title="" itemprop="url"><img src="assets/images/a3.jpg"
                                     alt="spnsr-img1-3.png" itemprop="image"></a>
                         </div>
                         <div class="spnsr-itm">
-                            <a href="#" title="" itemprop="url"><img src="assets/images/dummy-logo.png"
+                            <a href="#" title="" itemprop="url"><img src="assets/images/a4.jpg"
                                     alt="spnsr-img1-4.png" itemprop="image"></a>
                         </div>
                         <div class="spnsr-itm">
-                            <a href="#" title="" itemprop="url"><img src="assets/images/dummy-logo.png"
+                            <a href="#" title="" itemprop="url"><img src="assets/images/a5.jpg"
+                                    alt="spnsr-img1-5.png" itemprop="image"></a>
+                        </div>
+                        <div class="spnsr-itm">
+                            <a href="#" title="" itemprop="url"><img src="assets/images/a6.jpg"
+                                    alt="spnsr-img1-5.png" itemprop="image"></a>
+                        </div>
+                        <div class="spnsr-itm">
+                            <a href="#" title="" itemprop="url"><img src="assets/images/a7.jpg"
                                     alt="spnsr-img1-5.png" itemprop="image"></a>
                         </div>
                     </div>
