--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -61,8 +61,7 @@
 
 /* Styles for the content section */
 
-line-height: 1.9;
-}
+
 @media (min-width: 500px) {
   
   #button1 {
@@ -420,7 +419,8 @@ line-height: 1.9;
                             alt="logo.png" itemprop="image"></a></div>
                 <span class="rspn-mnu-btn"><i class="fa fa-align-center"></i></span>
             </div>
-            <div>
+            <div class="rsnp-mnu">
+                <span class="rspn-mnu-cls"><i class="fa fa-times"></i></span>
                 <a class="srch-btn" href="#" title="" itemprop="url" ><i class="flaticon-magnifier" style="text-align: left;"></i></a>
                 <ul>
                     <li class="menu-item-has-children" style="font-weight: bold;"><a href="#" title="" itemprop="url">About Us</a>
@@ -798,7 +798,7 @@ line-height: 1.9;
                         </div>
                     </div>
                     <br>
-                    <a class="thm-btn" style=" margin-top: 5%;"href="" title="" itemprop="url">Real All News</a>
+                    <a class="thm-btn" style=" margin-top: 5%;"href="" title="" itemprop="url">Read All News</a>
                 </div>
                 
             </div>
