--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -948,6 +948,45 @@
             </div>
         </section>
         <section>
+            <div class="gap drk-blu-bg">
+                <div id="prtcl1" class="particle-bx"></div>
+                <div class="container">
+                    <ul class="fact-lst text-center remove-ext3">
+                        <li>
+                            <div class="fact-box3">
+                                <h4 itemprop="headline"><span class="counter">1982</span></h4>
+                                <span>Cups of coffe & tea</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="fact-box3">
+                                <h4 itemprop="headline"><span class="counter">25</span>+</h4>
+                                <span>Years of experience</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="fact-box3">
+                                <h4 itemprop="headline"><span class="counter">21</span>+</h4>
+                                <span>Hours on projects</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="fact-box3">
+                                <h4 itemprop="headline"><span class="counter">121</span></h4>
+                                <span>National awards</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="fact-box3">
+                                <h4 itemprop="headline"><span class="counter">121</span></h4>
+                                <span>National awards</span>
+                            </div>
+                        </li>
+                    </ul><!-- Fact List -->
+                </div>
+            </div>
+        </section>
+        <section>
             <div class="gap remove-gap">
                 <div class="sec-title text-center">
                     <!-- <span>Quickly unleash cross</span> -->
@@ -1017,7 +1056,7 @@
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6 col-lg-3 fltr-itm fltr-itm4 slideInUp wow" data-wow-duration="" data-wow-delay="">
-                                <div class="prtfl-box2 style2">
+                                 <div class="prtfl-box2 style2">
                                     <div class=container style="position: relative;
                                     text-align: center;
                                     ">
@@ -1041,84 +1080,34 @@
                 </div>
             </div>
         </section> 
- 
-        <section>
-            <div class="gap remove-gap"></div>
-                <div class="container">
-                    <div class="remove-ext3">
-                        <div class="row">
-                            <div class="col-md-3 col-sm-6 col-lg-3">
-                                <div class="fact-box2">
-                                    <i class="thm-clr flaticon-group"></i>
-                                    <div class="fact-inf">
-                                        <h4 itemprop="headline"><span class="counter">10</span><small>K</small></h4>
-                                        <span>Clearance Happy Customers</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3 col-sm-6 col-lg-3">
-                                <div class="fact-box2">
-                                    <i class="thm-clr fa fa-pencil-square-o"></i>
-                                    <div class="fact-inf">
-                                        <h4 itemprop="headline"><span class="counter">18</span></h4>
-                                        <span>Years Of Experiences</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3 col-sm-6 col-lg-3">
-                                <div class="fact-box2">
-                                    <i class="thm-clr flaticon-coffee-cup"></i>
-                                    <div class="fact-inf">
-                                        <h4 itemprop="headline"><span class="counter">100</span><small>+</small></h4>
-                                        <span>Professional Advisors</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3 col-sm-6 col-lg-3">
-                                <div class="fact-box2">
-                                    <i class="thm-clr fa fa-line-chart"></i>
-                                    <div class="fact-inf">
-                                        <h4 itemprop="headline"><span class="counter">3060</span></h4>
-                                        <span>Cases Every Years</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section>
-            <div style="margin:50px;"></div>
-        </section>
         <section>
             <div class="gap remove-gap">
                 <div class="container">
                     <div class="spnsr-wrp spnsr-car text-center owl-carousel">
-                        <div >
+                        <div>
                             <a href="#" title="" itemprop="url"><img src="assets/images/a1.png"
                                     alt="spnsr-img1-1.png" itemprop="image"></a>
-                        </div>
+                        </div>&nbsp;
                         <div >
                             <a href="#" title="" itemprop="url"><img src="assets/images/a2.jpg"
                                     alt="spnsr-img1-2.png" itemprop="image"></a>
-                        </div>
+                        </div>&nbsp;
                         <div >
                             <a href="#" title="" itemprop="url"><img src="assets/images/a3.jpg"
                                     alt="spnsr-img1-3.png" itemprop="image"></a>
-                        </div>
+                        </div>&nbsp;
                         <div >
                             <a href="#" title="" itemprop="url"><img src="assets/images/a4.jpg"
                                     alt="spnsr-img1-4.png" itemprop="image"></a>
-                        </div>
+                        </div>&nbsp;
                         <div >
                             <a href="#" title="" itemprop="url"><img src="assets/images/a5.jpg"
                                     alt="spnsr-img1-5.png" itemprop="image"></a>
-                        </div>
+                        </div>&nbsp;
                         <div>
                             <a href="#" title="" itemprop="url"><img src="assets/images/a6.jpg"
                                     alt="spnsr-img1-5.png" itemprop="image"></a>
-                        </div>
+                        </div>&nbsp;
                         <div >
                             <a href="#" title="" itemprop="url"><img src="assets/images/a7.jpg"
                                     alt="spnsr-img1-5.png" itemprop="image"></a>
@@ -1127,6 +1116,11 @@
                 </div>
             </div>
         </section>
+        
+        <section>
+            <div style="margin:50px;"></div>
+        </section>
+        
         <footer>
             <div class="gap drk-bg top-spac80 bottom-spac80">
                 <div class="container">
