--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -1235,9 +1235,11 @@
                                     <div class="wdgt-gal-car owl-carousel">
                                         <div class="wdgt-gal-itm">
                                             <div class="row mrg">
-                                                <div class="col-md-12 col-sm-12 col-lg-12"><img
-                                                        src="assets/demo/world_map.png" alt="wdgt-gal-img1-1.jpg" style="filter: invert(34%) sepia(3%) saturate(3056%) hue-rotate(21deg) brightness(65%) contrast(74%);"
-                                                        itemprop="image"></div>
+                                                <div class="col-md-12 col-sm-12 col-lg-12">
+                                                    <!-- <img
+                                                        src="" alt="wdgt-gal-img1-1.jpg" style="filter: invert(34%) sepia(3%) saturate(3056%) hue-rotate(21deg) brightness(65%) contrast(74%);"
+                                                        itemprop="image"> -->
+                                                    </div>
                                                 
                                             </div>
                                         </div>
