--- a/uticoindex1.html
+++ b/uticoindex1.html
@@ -596,7 +596,7 @@
         <section>
             <div id="rev_slider_4_1_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="notgeneric125"
                 data-source="gallery" style="background-color:transparent;padding:0px;">
-                <div id="rev_slider_4_1" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.1">
+                <div id="rev_slider_4_1" class="rev_slider fullscreenbanner " style="display:none;height: 85% !important;" data-version="5.4.1">
                     <ul>
                         <li data-index="rs-1" data-transition="none" data-slotamount="default" data-hideafterloop="0"
                             data-hideslideonmobile="off" data-title="Slide Title" data-easein="" data-easeout=""
@@ -606,7 +606,7 @@
                             data-param9="" data-param10="" data-description="">
                             <!-- MAIN IMAGE -->
                             <img src="assets/demo/img3.jpg"  alt=""href="#" data-bgposition="center center" data-bgfit="cover"
-                                data-bgrepeat="no-repeat" data-bgparallax="10" style="height: 85% !important;" class="rev-slidebg" data-no-retina>
+                                data-bgrepeat="no-repeat" data-bgparallax="10"  class="rev-slidebg" data-no-retina>
 
                             <!-- LAYER NR. 1 -->
                             <div class="tp-caption tp-resizeme" id="slide-layer7-1"
@@ -1410,6 +1410,7 @@ btn.on('click', function(e) {
         $("#EPC").hide();
         $("#Solar").show();
       });
+      $("#rev_slider_4_1").height("700px");
       });
     </script>
 </body>
