--- a/index.html
+++ b/index.html
@@ -1145,8 +1145,8 @@
             margin-top: 4%;
             margin-left: 0%;
             margin-right: 0%;
-            box-shadow: 0 0 5px #000;
-            background-color:#013b61;
+           
+            background-color:#ffffff;
             ">
             <div class="gap remove-gap">
                 
