--- a/utico_new/index.html
+++ b/utico_new/index.html
@@ -877,8 +877,8 @@
             margin-top: 4%;
             margin-left: 0%;
             margin-right: 0%;
-            box-shadow: 0 0 5px #000;
-            background-color:#013b61;
+           
+            background-color:#fff;
             ">
             <div class="gap remove-gap">
                 
