--- a/index.html
+++ b/index.html
@@ -1063,9 +1063,9 @@
                                             <a href="assets/images/water10.jpg" data-fancybox="gallery" title="" itemprop="url"></a>
                                             <a href="" title="" itemprop="url"></a>
                                         </div>
-                                        <!-- <h4 itemprop="headline"><a href="#" title="" itemprop="url">EPC</a></h4>-->
+                                         <h4 itemprop="headline"style="margin-top:19%;"><a href="#" title="" style="color:white;font-size:25px !important;"itemprop="url">EPC</a></h4>
                                         <a href="" title="" itemprop="url"><i
-                                            class="thm-btn fa fa-arrow-right" style="margin-top:110%">Read More</i></a>
+                                            class="thm-btn fa fa-arrow-right" style="margin-top:0%">Read More</i></a>
                                     </div>
                                 </div>
                             </div>
@@ -1084,9 +1084,9 @@
                                             <a href="assets/images/water11.jpg" data-fancybox="gallery" title="" itemprop="url"></a>
                                             <a href="" title="" itemprop="url"></a>
                                         </div>
-                                        <!-- <h4 itemprop="headline"><a href="#" title="" itemprop="url">Engineering</a></h4>-->
+                                        <h4 itemprop="headline"style="margin-top:19%;"><a href="#" title="" style="color:white;font-size:25px !important;" itemprop="url">Engineering</a></h4>
                                         <a href="" title="" itemprop="url"><i
-                                            class="thm-btn fa fa-arrow-right" style="margin-top:110%">Read More</i></a>
+                                            class="thm-btn fa fa-arrow-right" style="margin-top:0%">Read More</i></a>
                                     </div>
                                 </div>
                             </div>
@@ -1105,9 +1105,9 @@
                                             <a href="assets/images/water12.jpg" data-fancybox="gallery" title="" itemprop="url"></a>
                                             <a href="" title="" itemprop="url"></a>
                                         </div>
-                                        <!-- <h4 itemprop="headline"><a href="#" title="" itemprop="url">Waste Water Management</a></h4>-->
+                                         <h4 itemprop="headline"style="margin-top:19%;"><a href="#" title=""style="color:white;font-size:25px !important;" itemprop="url">Waste Water Management</a></h4>
                                         <a href="" title="" itemprop="url"><i
-                                            class="thm-btn fa fa-arrow-right" style="margin-top:110%">Read More</i></a>
+                                            class="thm-btn fa fa-arrow-right" style="margin-top:0%">Read More</i></a>
                                     </div>
                                 </div>
                             </div>
@@ -1126,9 +1126,9 @@
                                             <a href="assets/images/water13.jpg" data-fancybox="gallery" title="" itemprop="url"></a>
                                             <a href="" title="" itemprop="url"></a>
                                         </div>
-                                        <!-- <h4 itemprop="headline"><a href="#" title="" itemprop="url">Operation & Maintenance</a></h4>-->
+                                         <h4 itemprop="headline" style="margin-top:19%;"><a href="#" title="" style="color:white;font-size:25px !important;"itemprop="url">Operation & Maintenance</a></h4>
                                         <a href="" title="" itemprop="url"><i
-                                            class="thm-btn fa fa-arrow-right" style="margin-top:110%">Read More</i></a>
+                                            class="thm-btn fa fa-arrow-right" style="margin-top:0%">Read More</i></a>
                                     </div>
                                 </div>
                             </div>
