--- a/utico_new/index.html
+++ b/utico_new/index.html
@@ -816,8 +816,9 @@
                                         </div>
                                         <!-- <h4 itemprop="headline"><a href="#" title="" itemprop="url">EPC</a></h4>
                                         <a href="" title="" itemprop="url">Know More</a> -->
+                                        <h4 itemprop="headline" style="margin-top:17%;"><a href="#" title="" style="color:white;font-size:25px !important;"itemprop="url">EPC</a></h4>
                                         <a href="" title="" itemprop="url"><i
-                                            class="thm-btn fa fa-arrow-right" style="margin-top:110%">Read More</i></a>
+                                            class="thm-btn fa fa-arrow-right" style="margin-top:0%">Read More</i></a>
                                     </div>
                                 </div>
                             </div>
@@ -838,8 +839,9 @@
                                         </div>
                                         <!-- <h4 itemprop="headline"><a href="#" title="" itemprop="url">Engineering</a></h4>
                                         <a href="" title="" itemprop="url">Know More</a> -->
+                                        <h4 itemprop="headline" style="margin-top:17%;"><a href="#" title="" style="color:white;font-size:25px !important;"itemprop="url">Engineering</a></h4>
                                         <a href="" title="" itemprop="url"><i
-                                            class="thm-btn fa fa-arrow-right" style="margin-top:110%">Read More</i></a>
+                                            class="thm-btn fa fa-arrow-right" style="margin-top:0%">Read More</i></a>
                                     </div>
                                 </div>
                             </div>
@@ -860,8 +862,9 @@
                                         </div>
                                         <!-- <h4 itemprop="headline"><a href="#" title="" itemprop="url">Waste Water Management</a></h4>
                                         <a href="" title="" itemprop="url">Know More</a> -->
+                                        <h4 itemprop="headline" style="margin-top:17%;"><a href="#" title="" style="color:white;font-size:25px !important;"itemprop="url">Waste Water Management</a></h4>
                                         <a href="" title="" itemprop="url"><i
-                                            class="thm-btn fa fa-arrow-right" style="margin-top:110%">Read More</i></a>
+                                            class="thm-btn fa fa-arrow-right" style="margin-top:0%">Read More</i></a>
                                     </div>
                                 </div>
                             </div>
@@ -882,8 +885,9 @@
                                         </div>
                                         <!-- <h4 itemprop="headline"><a href="#" title="" itemprop="url">Operation & Maintenance</a></h4>
                                         <a href="" title="" itemprop="url">Know More</a> -->
+                                        <h4 itemprop="headline" style="margin-top:17%;"><a href="#" title="" style="color:white;font-size:25px !important;"itemprop="url">Operation & Maintenance</a></h4>
                                         <a href="" title="" itemprop="url"><i
-                                            class="thm-btn fa fa-arrow-right" style="margin-top:110%">Read More</i></a>
+                                            class="thm-btn fa fa-arrow-right" style="margin-top:0%">Read More</i></a>
                                     </div>
                                 </div>
                             </div>
