--- a/testindex.html
+++ b/testindex.html
@@ -1247,7 +1247,7 @@
                                         <a href="" title="" itemprop="url"><img src="assets/demo/b1.jpg" alt="pst-img1-1.jpg" itemprop="image"></a>
                                     </div>
                                     <div class="">
-                                        <h4 itemprop="headline"><a href="" style="color: #fff;font-family: 'Montserrat';" title="" itemprop="url">Free Water for Sustainable Farming :</a></h4>
+                                        <h4 itemprop="headline"><a href="" style="color: #fff;font-family: 'Montserrat';font-size: 19px;" title="" itemprop="url">Free Water for Sustainable Farming :</a></h4>
                                         <p itemprop="description"><br><br></p>
                                     </div>
                                 </div>
@@ -1259,7 +1259,7 @@
                                         <a href="" title="" itemprop="url"><img src="assets/demo/b2.jpg" alt="pst-img1-2.jpg" itemprop="image"></a>
                                     </div>
                                     <div class="">
-                                        <h4 itemprop="headline"><a href="" title="" style="color: #fff;font-family: 'Montserrat';" itemprop="url">Utico meets SIAS and PUB on Hyflux deal :</a></h4>
+                                        <h4 itemprop="headline"><a href="" title="" style="color: #fff;font-family: 'Montserrat';font-size: 19px;" itemprop="url">Utico meets SIAS and PUB on Hyflux deal :</a></h4>
                                         <p itemprop="description"><br><br></p>
                                     </div>
                                 </div>
@@ -1271,7 +1271,7 @@
                                         <a href="" title="" itemprop="url"><img src="assets/demo/b3.jpg" alt="pst-img1-3.jpg" itemprop="image"></a>
                                     </div>
                                     <div class="">
-                                        <h4 itemprop="headline"><a href="" title="" style="color: #fff;font-family: 'Montserrat';" itemprop="url">Utico provides Hyflux binding agreement :</a></h4>
+                                        <h4 itemprop="headline"><a href="" title="" style="color: #fff;font-family: 'Montserrat';font-size: 19px;" itemprop="url">Utico provides Hyflux binding agreement :</a></h4>
                                         <p itemprop="description"><br><br></p>
                                     </div>
                                 </div>
