--- a/uticonew/index.html
+++ b/uticonew/index.html
@@ -98,7 +98,7 @@
                         <div class="pearo-responsive-menu">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="assets/img/logo.png" alt="logo">
+                                    <img src="assets/img/utico1.png" alt="logo">
                                 </a>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                     <div class="container">
                         <nav class="navbar navbar-expand-md navbar-light">
                             <a class="navbar-brand" href="index.html">
-                                <img src="assets/img/logo.png" alt="logo">
+                                <img src="assets/img/utico1.png" alt="logo">
                             </a>
 
                             <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
@@ -1392,7 +1392,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-footer-widget">
                             <div class="logo">
-                                <a href="#"><img src="assets/img/white-logo.png" alt="image"></a>
+                                <a href="#"><img src="assets/img/utico1.png" alt="image"></a>
 
                                 <!-- <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra lacus vel facilisis.</p> -->
                             </div>
