--- a/uticonew/index.html
+++ b/uticonew/index.html
@@ -32,7 +32,7 @@
 
         <title>Pearo - Insurance Company HTML Template</title>
 
-        <link rel="icon" type="image/png" href="assets/img/favicon.png">
+        <link rel="icon" type="image/png" href="https://webeefy.com/uticome2/assets/images/logo-2.png">
     </head>
 
     <body> 
@@ -98,7 +98,7 @@
                         <div class="pearo-responsive-menu">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="assets/img/utico1.png" alt="logo">
+                                    <img src="https://webeefy.com/uticome2/assets/images/logo-2.png" alt="logo">
                                 </a>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                     <div class="container">
                         <nav class="navbar navbar-expand-md navbar-light">
                             <a class="navbar-brand" href="index.html">
-                                <img src="assets/img/utico1.png" alt="logo">
+                                <img src="https://webeefy.com/uticome2/assets/images/logo-2.png" alt="logo">
                             </a>
 
                             <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
@@ -1392,7 +1392,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-footer-widget">
                             <div class="logo">
-                                <a href="#"><img src="assets/img/utico1.png" alt="image"></a>
+                                <a href="#"><img src="https://webeefy.com/uticome2/assets/images/logo-2.png" alt="image"></a>
 
                                 <!-- <p>Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra lacus vel facilisis.</p> -->
                             </div>
@@ -1443,7 +1443,7 @@
                 <div class="copyright-area">
                     <div class="row align-items-center">
                         <div class="col-lg-6 col-sm-6 col-md-6">
-                            <p><i class="far fa-copyright"></i> 2019 Pearo. All Rights Reserved by <a href="https://envytheme.com/" target="_blank">EnvyTheme</a></p>
+                            <p><i class="far fa-copyright"></i> 2021 Utico. All Rights Reserved by <a href="https://codersdek.com/" target="_blank">CodersDek</a></p>
                         </div>
 
                         <div class="col-lg-6 col-sm-6 col-md-6">
