--- a/uticonew/index.html
+++ b/uticonew/index.html
@@ -30,7 +30,7 @@
         <!-- Responsive CSS -->
         <link rel="stylesheet" href="assets/css/responsive.css">
 
-        <title>Pearo - Insurance Company HTML Template</title>
+        <title>Utico-Powered by Codersdek</title>
 
         <link rel="icon" type="image/png" href="https://webeefy.com/uticome2/assets/images/logo-2.png">
     </head>
