--- a/uticonew/index-4.html
+++ b/uticonew/index-4.html
@@ -574,7 +574,7 @@
         <!-- End Find Agent Area -->
 
         <!-- Start Feedback Area -->
-        <section class="feedback-area ptb-100">
+        <!-- <section class="feedback-area ptb-100">
             <div class="container">
                 <div class="section-title">
                     <span class="sub-title">Our Feedback</span>
@@ -632,7 +632,7 @@
                     </div>
 				</div>
             </div>
-        </section>
+        </section> -->
         <!-- End Feedback Area -->
 
         <!-- Start Our Achievements Area -->
