--- a/uticonew/index-2.html
+++ b/uticonew/index-2.html
@@ -592,7 +592,7 @@
         <!-- End Find Agent Area -->
 
         <!-- Start Feedback Area -->
-        <section class="feedback-area ptb-100">
+        <!-- <section class="feedback-area ptb-100">
             <div class="container">
                 <div class="section-title">
                     <span class="sub-title">Our Feedback</span>
@@ -650,7 +650,7 @@
                     </div>
 				</div>
             </div>
-        </section>
+        </section> -->
         <!-- End Feedback Area -->
 
         <!-- Start CTR Area -->
