--- a/uticonew/index-3.html
+++ b/uticonew/index-3.html
@@ -561,7 +561,7 @@
         <!-- End Services Area -->
 
         <!-- Start Why Choose Us Area -->
-        <section class="why-choose-us-area">
+        <!-- <section class="why-choose-us-area">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-5 col-md-12">
@@ -643,11 +643,11 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- End Why Choose Us Area -->
 
         <!-- Start Feedback Area -->
-        <section class="feedback-area ptb-100">
+        <!-- <section class="feedback-area ptb-100">
             <div class="container">
                 <div class="section-title">
                     <span class="sub-title">Our Feedback</span>
@@ -793,7 +793,7 @@
                     </div>
 				</div>
             </div>
-        </section>
+        </section> -->
         <!-- End Feedback Area -->
 
         <!-- Start CTR Area -->
