--- a/uticonew/index.html
+++ b/uticonew/index.html
@@ -647,7 +647,7 @@
         <!-- End Partner Area -->
 
         <!-- Start Why Choose Us Area -->
-        <section class="why-choose-us-area">
+        <!-- <section class="why-choose-us-area">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-5 col-md-12">
@@ -729,7 +729,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- End Why Choose Us Area -->
 
         <!-- Start Quote Area -->
@@ -921,7 +921,7 @@
         <!-- End CTR Area -->
 
         <!-- Start Feedback Area -->
-        <section class="feedback-area ptb-100">
+        <!-- <section class="feedback-area ptb-100">
             <div class="container">
                 <div class="section-title">
                     <span class="sub-title">Our Feedback</span>
@@ -1067,7 +1067,7 @@
                     </div>
 				</div>
             </div>
-        </section>
+        </section> -->
         <!-- End Feedback Area -->
 
         <!-- Start Our Mission Area -->
