--- a/uticonew/index.html
+++ b/uticonew/index.html
@@ -123,6 +123,7 @@
                                             <li class="nav-item"><a href="index-3.html" class="nav-link">Home Three</a></li>
 
                                             <li class="nav-item"><a href="index-4.html" class="nav-link">Home Four</a></li>
+                                            <li class="nav-item"><a href="index5.html" class="nav-link">Devs Choice</a></li>
                                         </ul>
                                     </li>
 
